--- a/src/MapRestaurants/MapRestaurant.css
+++ b/src/MapRestaurants/MapRestaurant.css
@@ -52,3 +52,12 @@ input::placeholder, textarea::placeholder {
     color: white;
     cursor: pointer;
 }
+
+.mapboxgl-canvas {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
