--- a/src/MapRestaurants/MapRestaurant.css
+++ b/src/MapRestaurants/MapRestaurant.css
@@ -53,7 +53,7 @@ input::placeholder, textarea::placeholder {
     cursor: pointer;
 }
 
-.mapboxgl-canvas {
+.map {
     position: absolute;
     top: 0;
     bottom: 0;
